# TabScribe

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: __init__.py
backend/app/: __init__.py  config.py  errors.py  main.py  protocol.py  sessions.py
backend/audio/: __init__.py  ingest.py  jitter.py  ring_buffer.py
backend/telemetry/: __init__.py  events.py
backend/tests/: conftest.py  test_audio_ingest.py  test_event_websocket.py  test_health.py  test_sessions_api.py
config/: default.yml
